--- a/package.json
+++ b/package.json
@@ -28,14 +28,12 @@
     "path": "^0.12.7",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.11.4",
-    "@angular/cli": "~13.3.1",
-    "@angular/compiler-cli": "~13.3.0",
-    "typescript": "~4.6.2"
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~13.3.1",
-   
+    "@angular/cli": "^14.0.3",
+    "@angular/compiler-cli": "~13.3.0",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
     "jasmine-core": "~4.0.0",
@@ -43,8 +41,8 @@
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.1.0",
     "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "~1.7.0"
-    
+    "karma-jasmine-html-reporter": "~1.7.0",
+    "typescript": "~4.6.2"
   },
   "engines": {
     "node": "16.14.2",
